[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii-mcp"
version = "1.0.0"
description = "MCP server for PII Intelligence API — detect, mask, and audit PII for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "pii", "privacy", "gdpr", "compliance", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
pii-mcp = "pii_mcp.server:main"

[project.urls]
Homepage = "https://rebaselabs.online"
Repository = "https://github.com/rebaselabs-framework/pii-mcp"
Documentation = "https://pii-api.rebaselabs.online"

[tool.hatch.build.targets.wheel]
packages = ["pii_mcp"]
